--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="author" content="Your name">
+   <meta charset="UTF-8">
+  <meta name="description" content="Blukicx is an online service provider where you find perfect services to enhance your online presence.">
+  <meta name="keywords" content="Instgram, facebook, Marketing">
+  <meta name="author" content="Gaurav Sharma">
 
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/font-awesome.css" rel="stylesheet">
