--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             </p>-->
             
             <ul class="social clearfix">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.facebook.com/people/Hey-Blukicx/100089887980526/"><i class="fa fa-facebook"></i></a></li>
               <li><a href="https://twitter.com/blukicx?t=jmGb96nuKdNqnWURb7OAYQ&amp;s=09"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://instagram.com/blukicx?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
